--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,3 +32,27 @@
   transform: translateY(-0.25rem) scale(1.10);          /* hover:-translate-y-1 hover:scale-110 */
   opacity: 1;                                           /* hover:opacity-100 */
 }
+
+.swiper {
+  width: 100%;
+  max-width: 390px;
+  height: 32px;
+  
+  /* Adicione estas duas linhas para centralizar o Swiper */
+  margin-left: auto;
+  margin-right: auto;
+  /* Ou, de forma abreviada: margin: 0 auto; */
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center; /* Centraliza o conteúdo do slide horizontalmente */
+  align-items: center;    /* Centraliza o conteúdo do slide verticalmente */
+}
+
+.swiper-slide img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  width: auto;
+}
