--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 
-*{
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
@@ -18,24 +18,23 @@
 }
 
 .icon-skills {
-  border-radius: 10px;         /* rounded-[10px] */
-  opacity: 0.5;                /* opacity-50 */
-  box-shadow: none;            /* shadow-none */
+  border-radius: 10px; /* rounded-[10px] */
+  opacity: 0.5; /* opacity-50 */
+  box-shadow: none; /* shadow-none */
 
-  transition: 
-    all 300ms ease-in-out 70ms; /* transition delay-70 duration-300 ease-in-out */
+  transition: all 300ms ease-in-out 70ms; /* transition delay-70 duration-300 ease-in-out */
 }
 
 .icon-skills:hover {
-  box-shadow: 0 10px 15px -3px rgba(255, 255, 255, 0.1), 
-              0 4px 6px -2px rgba(255, 255, 255, 0.05); /* hover:shadow-lg hover:shadow-white/10 */
-  transform: translateY(-0.25rem) scale(1.10);          /* hover:-translate-y-1 hover:scale-110 */
-  opacity: 1;                                           /* hover:opacity-100 */
+  box-shadow: 0 10px 15px -3px rgba(255, 255, 255, 0.1),
+    0 4px 6px -2px rgba(255, 255, 255, 0.05); /* hover:shadow-lg hover:shadow-white/10 */
+  transform: translateY(-0.25rem) scale(1.1); /* hover:-translate-y-1 hover:scale-110 */
+  opacity: 1; /* hover:opacity-100 */
 }
 
 .swiper {
   width: 100%;
-  
+
   /* Adicione estas duas linhas para centralizar o Swiper */
   margin-left: auto;
   margin-right: auto;
@@ -45,7 +44,7 @@
 .swiper-slide {
   display: flex;
   justify-content: center; /* Centraliza o conteúdo do slide horizontalmente */
-  align-items: center;    /* Centraliza o conteúdo do slide verticalmente */
+  align-items: center; /* Centraliza o conteúdo do slide verticalmente */
 }
 
 .swiper-slide img {
@@ -55,22 +54,22 @@
   width: auto;
 }
 
-.btn-links{
+.btn-links {
   border-radius: 999px;
   padding: 6px 24px;
   transition: ease-in;
 }
 
-.btn-links:hover{
+.btn-links:hover {
   border-radius: 999px;
   padding: 6px 24px;
-  background-color: #E6BAFF;
-  color: #000000CC;
+  background-color: #e6baff;
+  color: #000000cc;
   transition: ease-in;
   cursor: pointer;
 }
 
-.btn-primary{
+.btn-primary {
   border-radius: 999px;
   width: 168px;
   height: 54px;
@@ -79,7 +78,7 @@
   font-size: 16px;
 }
 
-.btn-primary:hover{
+.btn-primary:hover {
   background-color: rgba(128, 128, 128, 0.192);
   border-color: white;
   transition: ease-out;
@@ -91,7 +90,7 @@
   text-align: center;
   padding: 6px 24px;
   border-radius: 6px;
-  color: #E8E8E8;
+  color: #e8e8e8;
   transition: ease-out;
   transition-duration: 300ms;
   transform: scale(0px);
@@ -99,8 +98,41 @@
 
 .btn-links-projects:hover {
   font-weight: 600;
-  background-color: #343A40;
+  background-color: #343a40;
   color: white;
   transition: ease-in;
   transition-duration: 200ms;
+}
+
+.glass {
+  background: rgba(217, 217, 217, 0.08);
+  -webkit-backdrop-filter: blur(102px);
+  backdrop-filter: blur(40px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+}
+
+.borda-top-bottom {
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+}
+.beveled-box {
+  border-radius: 0px;
+  background-color: #d9d9d914;
+  border-top: 1px solid rgba(255, 255, 255, 0.048);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.048);
+
+  box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.123);
+}
+
+.skills-box {
+  border-radius: 999px;
+  background-color: #e6baff33;
+  border-top: 1px solid rgba(255, 255, 255, 0.267);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.267);
+}
+
+.nav-box {
+  background-color: #e6baff33;
+  border-top: 1px solid rgba(255, 255, 255, 0.267);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.267);
 }
