--- a/src/css/style.css
+++ b/src/css/style.css
@@ -136,3 +136,14 @@
   border-top: 1px solid rgba(255, 255, 255, 0.267);
   border-bottom: 1px solid rgba(255, 255, 255, 0.267);
 }
+
+#loading {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+background-color: rgb(12 10 9);
+  z-index: 9999;
+  transition: opacity 0.7s ease;
+}
