--- a/src/css/style.css
+++ b/src/css/style.css
@@ -162,5 +162,7 @@ background-color: rgb(12 10 9);
   -webkit-mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: 100% 100%;
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
   mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
 }
